# Relipmoc

./: .gitignore  BNF.md  CMakeLists.txt  Cargo.toml  LICENSE  README.md  input.cpp  junk.txt  lexer.cpp  lexer.hpp  main.cpp  tokensOutput.txt
data/: code.txt  code1.txt
include/relipmoc/: lexer.hpp  token.hpp
src/: lexer.cpp  main.cpp  main.rs  token.cpp  tokens.rs
src/AST/: enums.rs
src/ir/: ir.rs  ir_generator.rs
src/lexer/: lexer.rs  tokens.rs
src/parser/: enums.bak  enums.rs  errors.rs  mod.rs  parser.bak  parser.rs  token_iterator.rs
src/semantics/: mod.rs  scope_checking.rs  semantic_analysis.rs
tests/: CMakeLists.txt  test_lexer.cpp
